client/src/Components/Styles/Tracklist.css
.StyledTrackList{
    background-color: black;
    border-radius: 5px;
    padding: 20px;
    width: 50vw;
  }
  
  .track__item{
    display: grid;
    grid-template-columns: 50px 1fr 1fr 100px 50px;
    align-items: center;
    background-color: #FE346E;
    border-radius: 10px;
    margin-bottom: 10px;
    padding: 10px;
  }
  .track__item__title-group{
    display: flex;
  }
  .track__item__num{
    font-size: 0.6em;
    font-weight: bold;
    color: white;
    margin-right: 10px;
  }
  
  .track__item__img img{
    width: 50px;
    height: 50px;
    border-radius: 5px;
    object-fit: cover;
  }
  
  .track__item__name{
    text-align: left;
    font-size: 0.6em;
    font-weight: bold;
    color: white;
  }
  .track__item__name-artist{
    padding-left: 15px;
  }
  
  .track__item__artist{
    text-align: left;
    font-size: 0.4em;
    color: white;
  }
  
  .track__item__album{
    font-size: 0.4em;
    color: white;
  }
  
  .track__item__duration{
    font-size: 0.4em;
    text-align: right;
    color: white;
  }
  .track__item__name, .track__item__artist {
    margin: 0;
    padding: 0;
  }

